Refactor rest api service to use generated models
